After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 686931 - siddec does not reset total_bytes when state is set to stopped
siddec does not reset total_bytes when state is set to stopped
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
0.10.18
Other Linux
: Normal normal
: 1.0.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-10-26 10:49 UTC by Warp_7
Modified: 2012-10-30 10:55 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Warp_7 2012-10-26 10:49:40 UTC
Using a simple filesource--siddec--audiosink pipeline, I encountered a bug in siddec.

Short story:
Asking in IRC about it (I'm a gst newbie), the answer was that the plugin does not set its total_bytes property to 0 when reset.

Longer story:
Situation:
- Set the pipeline's state to GST_STATE_PLAYING and let it play for <x> seconds.
- Set the state back to GST_STATE_NULL.
- Start playing again.

Observed behaviour:
When played for the first time, the tune comes as expected.
But starting with the second playback, it begins with <x> seconds of silence, then the tune begins. This delay is accumulative.

Expected behaviour:
Playback should start with the tune immediately.


I'm using gstreamer core 0.10.35, but siddec is 0.10.18 (last stable package in Gentoo portage).
Comment 1 Wim Taymans 2012-10-30 09:30:52 UTC
commit b979e19af7d8c21dbd0ce3368f1652bc25e22898
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Tue Oct 30 09:20:04 2012 +0000

    siddec: reset bytes counter
    
    Reset the total_bytes counter so that we get timestamps correct.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=686931
Comment 2 Wim Taymans 2012-10-30 10:55:06 UTC
also related:

commit 5f44303925468413c7dbf8150cda297c8867ced3
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Tue Oct 30 10:19:59 2012 +0000

    audioringbuffer: reset spec on _release
    
    Reset the caps and the audioinfo when releasing the ringbuffer.
    Fixed a bug with reusing pulsesink.