siddec: reset bytes counter

Reset the total_bytes counter so that we get timestamps correct.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=686931

Conflicts:
	ext/sidplay/gstsiddec.cc